[package]
name = "jellyfin"
version = "0.1.3"
edition = "2021"
license = "MIT"
keywords = ["media", "jellyfin", "streaming"]
categories = ["api-bindings"]
description = "Bindings to the jellyfin web API"
homepage = "https://github.com/sargon64/jellyfin-rs"
repository = "https://github.com/sargon64/jellyfin-rs"
include = [
    "**/*.rs",
    "Cargo.toml",
    "LICENSE"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
debug = []

[dependencies]
md5 = "0.7.0"
reqwest = { version = "0.11.18", features = ["rustls", "json"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_derive = "1.0.164"
serde_json = "1.0.97"
sha1 = "0.10.5"
url = "2.4.0"
whoami = "1.4.0"

[dev-dependencies]
tokio = { version = "1.28.2", features = ["macros"] }
